<?xml version="1.0" encoding="UTF-8" standalone="no"?><!--
   Copyright 2012, predic8 GmbH, www.predic8.com

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>membrane-service-proxy</artifactId>
	<name>${project.artifactId}</name>
	<packaging>jar</packaging>

	<parent>
		<groupId>org.membrane-soa</groupId>
		<artifactId>service-proxy-parent</artifactId>
		<relativePath>../pom.xml</relativePath>
		<version>5.0.0-alpha-3</version>
	</parent>

	<!-- Only the Starter is in Java 1.8, so it can startup and display an error if the Java version is wrong -->
	<properties>
		<maven.compiler.release>8</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.membrane-soa</groupId>
			<artifactId>service-proxy-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.membrane-soa</groupId>
			<artifactId>service-proxy-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbynet</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-matchers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Skip the enforcement of Java 17 in the parent POM cause we want to compile the starter in
			     the distribution project with Java 8.
			-->
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/distribution.xml</descriptor>
					</descriptors>
					<archiverConfig>
						<fileMode>420</fileMode>
						<directoryMode>493</directoryMode>
						<defaultDirectoryMode>493</defaultDirectoryMode>
					</archiverConfig>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<!-- excludes the dist part from the final name -->
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<failIfNoTests>false</failIfNoTests>
					<test>**/ExampleUnitTests.java</test>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<test>**/ExampleTests.java</test>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.predic8.membrane.core.IDEStarter</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>